@@ -1,5 +1,10 @@
 2016-01-16  Marcin Kościelnicki  <koriakin@0x04.net>
 
+	* config/s390/s390.c (s390_asm_declare_function_size): Add code
+	to actually emit the .size directive.
+
+2016-01-02  Marcin Kościelnicki  <koriakin@0x04.net>
+
 	* config/s390/s390.md (pool_section_start): Use switch_to_section
 	to select proper read-only data section instead of hardcoding .rodata.
 	(pool_section_end): Use switch_to_section to match the above.
